java common integration (#180)
* bump minimum supported android version to api 18 (up from api 16)
* replace deprecated android libraries with their androidx equivalents
* update all dependencies to their latest stable versions
* remove old compatibility code 
* update source and target version to 1.8 (up from 1.7)
* remove all deprecated apis
* replace android specific LDValue and LDUser with java-sdk-common
* update LDConfig.Builder api to be less verbose